<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/bg_color">

    <ImageView
        android:src="@drawable/bg_login2"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/rvly_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="20dp"
            android:src="@drawable/aksess"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="80dp"
            android:padding="15dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo_login" />

        <TextView
            android:textColor="@color/bg_white_color"
            android:textSize="20sp"
            android:shadowColor="#000000"
            android:shadowRadius="3"
            android:shadowDy="3"
            android:fontFamily="@font/roboto_bold"
            android:text="PT MITRA DATA SARANA"
            android:layout_centerInParent="true"
            android:layout_below="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvly_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:background="@drawable/shape_edittext"
            android:hint="@string/username"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@drawable/ripple_button"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:fontFamily="@font/ubuntu_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <TextView
            android:id="@+id/tv_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/border_bottom"
            android:fontFamily="@font/roboto_regular"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="4"
            android:textStyle="bold"
            android:textSize="16sp"
            android:shadowRadius="2"
            android:text="@string/hubungi_kami"
            android:textColor="#62ebff" />

        <TextView
            android:id="@+id/tv_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:fontFamily="@font/ubuntu_light"
            android:textColor="#62ebff"
            android:shadowDx="2"
            android:shadowDy="4"
            android:textStyle="bold"
            android:shadowRadius="2"
            android:textSize="16sp"
            android:shadowColor="#000000"
            android:layout_alignParentRight="true"
            android:background="@drawable/border_bottom"
            />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>