<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.driver.secure.DriverAssuranceActivity">

    <include
        android:id="@+id/lay_header"
        layout="@layout/header_drivsecure_ui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        layout="@layout/bottomnav_driver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_header"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar_driver">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/title_assuranceclaim"
                android:textColor="@color/text_blue_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/ubuntu_light"
                    android:text="Kendaraan"
                    android:textColor="@color/text_blue_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_edittext"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">

                    <Spinner
                        android:id="@+id/sp_vehicle_as"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/ubuntu_light"
                    android:text="Jenis Klaim Asuransi"
                    android:textColor="@color/text_blue_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_edittext"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">

                    <Spinner
                        android:id="@+id/sp_type_assurance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/ripple_button"
                        android:fontFamily="@font/ubuntu_light"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ripple_button"
                        android:fontFamily="@font/ubuntu_light"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>